Add Tailwind CSS showcase layout to index.html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,184 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tailwind CSS Showcase - Oguri Cap Edition</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        html { scroll-behavior: smooth; }
+    </style>
+</head>
+<body class="bg-slate-50 text-slate-900 font-sans antialiased">
 
+    <nav class="sticky top-0 z-50 bg-white/80 backdrop-blur-md border-b border-slate-200 p-4">
+        <div class="max-w-6xl mx-auto flex justify-between items-center">
+            <h1 class="text-xl font-bold bg-gradient-to-r from-blue-600 to-cyan-500 bg-clip-text text-transparent">
+                Tailwind UI Kit
+            </h1>
+            <div class="hidden md:flex space-x-6 text-sm font-medium text-slate-600">
+                <a href="#colors" class="hover:text-blue-600 transition">Colors</a>
+                <a href="#typography" class="hover:text-blue-600 transition">Typography</a>
+                <a href="#buttons" class="hover:text-blue-600 transition">Buttons</a>
+                <a href="#images" class="hover:text-blue-600 transition">Images</a>
+                <a href="#flex" class="hover:text-blue-600 transition">Layout</a>
+            </div>
+        </div>
+    </nav>
+
+    <main class="max-w-6xl mx-auto p-6 space-y-24 my-10">
+
+        <section id="colors">
+            <h2 class="text-3xl font-extrabold mb-6 flex items-center gap-2">
+                <span class="w-2 h-8 bg-blue-600 rounded-full"></span> Color Palettes
+            </h2>
+            <div class="grid grid-cols-2 md:grid-cols-5 gap-4">
+                <div class="space-y-2 text-center">
+                    <div class="h-20 w-full bg-blue-500 rounded-xl shadow-inner border border-black/5"></div>
+                    <span class="text-xs font-mono font-bold tracking-tight">blue-500</span>
+                </div>
+                <div class="space-y-2 text-center">
+                    <div class="h-20 w-full bg-emerald-500 rounded-xl shadow-inner border border-black/5"></div>
+                    <span class="text-xs font-mono font-bold tracking-tight">emerald-500</span>
+                </div>
+                <div class="space-y-2 text-center">
+                    <div class="h-20 w-full bg-violet-500 rounded-xl shadow-inner border border-black/5"></div>
+                    <span class="text-xs font-mono font-bold tracking-tight">violet-500</span>
+                </div>
+                <div class="space-y-2 text-center">
+                    <div class="h-20 w-full bg-amber-500 rounded-xl shadow-inner border border-black/5"></div>
+                    <span class="text-xs font-mono font-bold tracking-tight">amber-500</span>
+                </div>
+                <div class="space-y-2 text-center">
+                    <div class="h-20 w-full bg-rose-500 rounded-xl shadow-inner border border-black/5"></div>
+                    <span class="text-xs font-mono font-bold tracking-tight">rose-500</span>
+                </div>
+            </div>
+        </section>
+
+        <section id="typography" class="space-y-4">
+            <h2 class="text-3xl font-extrabold mb-6 flex items-center gap-2">
+                <span class="w-2 h-8 bg-emerald-500 rounded-full"></span> Typography
+            </h2>
+            <div class="p-8 bg-white border border-slate-200 rounded-3xl space-y-6 shadow-sm">
+                <div>
+                    <p class="text-xs text-blue-600 uppercase tracking-widest font-black mb-1">Procrastinating Student!</p>
+                    <h3 class="text-4xl md:text-5xl font-black italic tracking-tighter text-slate-900 leading-none">
+                        Kient Gascon
+                    </h3>
+                </div>
+                <p class="text-xl text-slate-600 leading-relaxed max-w-2xl">
+                    Tailwind makes it easy to control <span class="underline decoration-blue-500 decoration-4 underline-offset-4 font-semibold text-slate-800">line height</span>, font weight, and <span class="bg-yellow-200 px-2 rounded">text highlights</span> effortlessly.
+                </p>
+            </div>
+        </section>
+
+        <section id="buttons">
+            <h2 class="text-3xl font-extrabold mb-6 flex items-center gap-2">
+                <span class="w-2 h-8 bg-violet-500 rounded-full"></span> Button Styles
+            </h2>
+            <div class="flex flex-wrap gap-6 items-center p-8 bg-slate-100 rounded-3xl">
+                <button class="px-8 py-3 bg-blue-600 text-white rounded-full hover:bg-blue-700 transition-all active:scale-95 shadow-lg shadow-blue-200 font-semibold">
+                    Primary Pill
+                </button>
+                <button class="px-8 py-3 bg-white border-2 border-slate-300 rounded-xl hover:border-slate-900 transition-colors font-semibold">
+                    Secondary Outline
+                </button>
+                <button class="px-8 py-3 bg-slate-900 text-white rounded-xl flex items-center gap-2 group hover:pr-6 transition-all">
+                    Icon Button
+                    <span class="group-hover:translate-x-2 transition-transform">→</span>
+                </button>
+                <button class="px-8 py-3 bg-gradient-to-br from-violet-600 to-fuchsia-500 text-white rounded-xl font-bold hover:shadow-xl hover:shadow-fuchsia-200 transition-shadow">
+                    Gradient Flow
+                </button>
+            </div>
+        </section>
+
+        <section id="cards">
+            <h2 class="text-3xl font-extrabold mb-6 flex items-center gap-2">
+                <span class="w-2 h-8 bg-rose-500 rounded-full"></span> Image Cards
+            </h2>
+            <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
+                
+                <div class="group bg-white rounded-3xl overflow-hidden border border-slate-200 shadow-sm hover:shadow-2xl transition-all duration-500">
+                    <div class="relative overflow-hidden aspect-[4/3]">
+                        <img src="Image/oguricap1.png" 
+                             alt="Oguri Cap 1"
+                             class="object-cover w-full h-full transition-transform duration-700 group-hover:scale-110">
+                        <span class="absolute top-4 left-4 bg-white/90 backdrop-blur-md px-3 py-1 rounded-full text-[10px] font-black text-slate-800 uppercase tracking-widest">
+                            Collection 01
+                        </span>
+                    </div>
+                    <div class="p-6">
+                        <h3 class="font-bold text-xl mb-2 group-hover:text-blue-600 transition-colors tracking-tight">Oguri Cap the first</h3>
+                        <p class="text-slate-500 text-sm leading-relaxed mb-4">Standard card layout featuring an image zoom on hover.</p>
+                        <div class="flex items-center gap-2 text-xs font-bold text-slate-400 uppercase">
+                            <span>View Details</span>
+                            <span class="h-px w-8 bg-slate-200"></span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="relative group h-full min-h-[400px] rounded-3xl overflow-hidden shadow-lg bg-slate-200">
+                    <img src="Image/oguricap2.png" 
+                         alt="Oguri Cap 2"
+                         class="absolute inset-0 w-full h-full object-cover">
+                    <div class="absolute inset-0 bg-gradient-to-t from-slate-950 via-slate-900/40 to-transparent opacity-80 group-hover:opacity-60 transition-opacity"></div>
+                    <div class="absolute bottom-0 p-8 text-white">
+                        <h3 class="text-2xl font-black mb-2">Oguri Cap the second</h3>
+                        <p class="text-slate-200 text-sm opacity-0 group-hover:opacity-100 transform translate-y-4 group-hover:translate-y-0 transition-all duration-500">
+                            Immersive full-height card using absolute positioning and gradients.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="bg-white p-4 rounded-3xl border border-slate-100 shadow-sm hover:border-blue-200 transition-colors">
+                    <div class="bg-slate-50 rounded-2xl aspect-square mb-6 flex items-center justify-center relative group overflow-hidden">
+                        <img src="Image/oguricap3.png" 
+                             alt="Oguri Cap 3"
+                             class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-500">
+                        <button class="absolute inset-0 bg-blue-600/10 opacity-0 group-hover:opacity-100 transition-opacity flex items-center justify-center">
+                            <span class="bg-white text-slate-900 px-4 py-2 rounded-lg font-bold text-sm shadow-xl">Full Preview</span>
+                        </button>
+                    </div>
+                    <div class="px-2 pb-2 text-center">
+                        <h3 class="font-bold text-slate-800 text-lg">Oguri Cap by me</h3>
+                        <p class="text-xs text-slate-400 mt-1 font-medium">Updated Gallery View</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="flex">
+            <h2 class="text-3xl font-extrabold mb-6 flex items-center gap-2">
+                <span class="w-2 h-8 bg-amber-500 rounded-full"></span> Layouts
+            </h2>
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
+                <div class="flex flex-col p-8 bg-white rounded-3xl border border-slate-200 shadow-sm">
+                    <div class="w-14 h-14 bg-indigo-600 text-white rounded-2xl flex items-center justify-center mb-6 text-2xl">⚡</div>
+                    <h4 class="font-bold text-xl mb-3 tracking-tight">Flex Vertical</h4>
+                    <p class="text-slate-500 text-sm">Consistent vertical stacking.</p>
+                </div>
+                <div class="flex flex-col justify-between p-8 bg-slate-900 text-white rounded-3xl">
+                    <h4 class="font-bold text-xl mb-3">Sticky Bottoms</h4>
+                    <button class="mt-8 w-full py-3 bg-white text-slate-900 rounded-xl text-sm font-black">GET STARTED</button>
+                </div>
+                <div class="p-8 bg-white rounded-3xl border border-slate-200">
+                    <h4 class="font-bold text-xl mb-4">Utility List</h4>
+                    <ul class="space-y-2 text-sm text-slate-600">
+                        <li>✔ Responsive Grid</li>
+                        <li>✔ Hover States</li>
+                        <li>✔ Dark Mode Ready</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+
+    </main>
+
+    <footer class="bg-white border-t border-slate-200 py-12 text-center text-slate-400 text-sm font-medium">
+        Built with Tailwind CSS
+    </footer>
+
+</body>
+</html>
